# bibliotheque

./: CMakeLists.txt  readme.md
data/: emprunts.txt  livres.txt  utilisateurs.txt
include/: emprunts.h  fichiers.h  livres.h  raygui.h  stats.h  utilisateurs.h
src/: emprunts.c  fichiers.c  livres.c  main.c  stats.c  utilisateurs.c
